[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
config = "0.13"
toml = "0.5"
