[package]
name = "metrics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = "0.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
