[package]
name = "mtu-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = "0.4"
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef"] }
libc = "0.2"
