[package]
name = "path-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = "0.5"
common = { path = "../common" }
hostname = "0.3"
windows-sys = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_IO"] }
trust-dns-resolver = { version = "0.23", features = ["system-config", "tokio-runtime"] }
lazy_static = "1.4"
crossterm = "0.27"
