[package]
name = "tcp-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
common = { path = "../common" }
hostname = "0.3"
libc = "0.2"
# Windows API for TCP stats
windows = { version = "0.48", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_Foundation"] }
